--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,21 @@
 #root{
   min-height: 100vh;
   display: flex;
+  animation: fadeIn 1.5s;
+}
+
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
+/* Hide Clerk Dev Mode Banner */
+.clerk-dev-toolbar,
+.clerk-dev-toolbar * {
+  display: none !important;
 }
